Versão final do site. Lançamento 0.0.1

--- a/index/checkout.html
+++ b/index/checkout.html
@@ -42,7 +42,7 @@
         <input type="text" placeholder="Estado" required>
       </section>
 
-      <section>
+      <section class="checkout-payment">
         <h2>Pagamento</h2>
 
         <label class="payment-option">
