--- a/index/index.html
+++ b/index/index.html
@@ -199,10 +199,10 @@
         data-id="sel-4"
         data-name="Alemanha 1990"
         data-price="279.90"
-        data-image="img/camisa4.png"
+        data-image="imgs/camisa_alemanha_home_2024_25_4609_1_5d3a19895569d9c2bf77a043026d41f5.webp"
         data-description="Camisa campeã mundial Alemanha 1990."
       >
-        <img src="img/camisa4.png">
+        <img src="imgs/camisa_alemanha_home_2024_25_4609_1_5d3a19895569d9c2bf77a043026d41f5.webp">
         <h4>Alemanha 1990</h4>
         <span class="price">R$ 279,90</span>
       </article>
@@ -211,10 +211,10 @@
         data-id="sel-5"
         data-name="Itália 2006"
         data-price="269.90"
-        data-image="img/camisa5.png"
+        data-image="imgs/camisa_itlia_i_2026_torcedor_masculina_azul_1_20251218095201_80e42082d4b6.webp"
         data-description="Camisa campeã mundial Itália 2006."
       >
-        <img src="img/camisa5.png">
+        <img src="imgs/camisa_itlia_i_2026_torcedor_masculina_azul_1_20251218095201_80e42082d4b6.webp">
         <h4>Itália 2006</h4>
         <span class="price">R$ 269,90</span>
       </article>
@@ -223,10 +223,10 @@
         data-id="sel-6"
         data-name="Holanda 1988"
         data-price="289.90"
-        data-image="img/camisa6.png"
+        data-image="imgs/camisa_holanda_away_2024_25_azul_5183_1_d1eb302b8eeedba426329ff8b91d2906.webp"
         data-description="Camisa campeã da Euro 1988."
       >
-        <img src="img/camisa6.png">
+        <img src="imgs/camisa_holanda_away_2024_25_azul_5183_1_d1eb302b8eeedba426329ff8b91d2906.webp">
         <h4>Holanda 1988</h4>
         <span class="price">R$ 289,90</span>
       </article>
@@ -244,10 +244,10 @@
         data-id="eur-1"
         data-name="Real Madrid"
         data-price="319.90"
-        data-image="img/camisa1.png"
+        data-image="imgs/camisarealmadridjogador11.png"
         data-description="Camisa oficial Real Madrid."
       >
-        <img src="img/camisa1.png">
+        <img src="imgs/camisarealmadridjogador11.png">
         <h4>Real Madrid</h4>
         <span class="price">R$ 319,90</span>
       </article>
@@ -256,10 +256,10 @@
         data-id="eur-2"
         data-name="Barcelona"
         data-price="309.90"
-        data-image="img/camisa2.png"
+        data-image="imgs/fcbarcelona202425inf.png"
         data-description="Camisa oficial Barcelona."
       >
-        <img src="img/camisa2.png">
+        <img src="imgs/fcbarcelona202425inf.png">
         <h4>Barcelona</h4>
         <span class="price">R$ 309,90</span>
       </article>
@@ -268,10 +268,10 @@
         data-id="eur-3"
         data-name="Manchester City"
         data-price="329.90"
-        data-image="img/camisa3.png"
+        data-image="imgs/2I3-9440-058_zoom1.webp"
         data-description="Camisa oficial Manchester City."
       >
-        <img src="img/camisa3.png">
+        <img src="imgs/2I3-9440-058_zoom1.webp">
         <h4>Manchester City</h4>
         <span class="price">R$ 329,90</span>
       </article>
@@ -280,10 +280,10 @@
         data-id="eur-4"
         data-name="PSG"
         data-price="299.90"
-        data-image="img/camisa4.png"
+        data-image="imgs/camisapsg1202526.png"
         data-description="Camisa oficial PSG."
       >
-        <img src="img/camisa4.png">
+        <img src="imgs/camisapsg1202526.png">
         <h4>PSG</h4>
         <span class="price">R$ 299,90</span>
       </article>
@@ -292,10 +292,10 @@
         data-id="eur-5"
         data-name="Milan"
         data-price="289.90"
-        data-image="img/camisa5.png"
+        data-image="imgs/puma-ac-mailand-trikot-home-2025-2026-rot-f01-rot-779962-removebg-preview-1-.png"
         data-description="Camisa oficial Milan."
       >
-        <img src="img/camisa5.png">
+        <img src="imgs/puma-ac-mailand-trikot-home-2025-2026-rot-f01-rot-779962-removebg-preview-1-.png">
         <h4>Milan</h4>
         <span class="price">R$ 289,90</span>
       </article>
@@ -304,10 +304,10 @@
         data-id="eur-6"
         data-name="Bayern"
         data-price="319.90"
-        data-image="img/camisa6.png"
+        data-image="imgs/camisa_bayern_de_munique_25_26_i_home_torcedor_masculina_vermelha_3404_1_1b1b170941f8cb18e4c3495b0dd83d76.webp"
         data-description="Camisa oficial Bayern de Munique."
       >
-        <img src="img/camisa6.png">
+        <img src="imgs/camisa_bayern_de_munique_25_26_i_home_torcedor_masculina_vermelha_3404_1_1b1b170941f8cb18e4c3495b0dd83d76.webp">
         <h4>Bayern</h4>
         <span class="price">R$ 319,90</span>
       </article>
@@ -326,10 +326,10 @@
       data-id="br-1"
       data-name="Flamengo 2024"
       data-price="299.90"
-      data-image="img/camisa1.png"
+      data-image="imgs/IV6047_1_APPAREL_Photography_Front-View_white-png-removebg-preview.png"
       data-description="Camisa oficial Flamengo temporada 2024."
     >
-      <img src="img/camisa1.png">
+      <img src="imgs/IV6047_1_APPAREL_Photography_Front-View_white-png-removebg-preview.png">
       <h4>Flamengo 2024</h4>
       <span class="price">R$ 299,90</span>
     </article>
@@ -338,10 +338,10 @@
       data-id="br-2"
       data-name="Corinthians 2024"
       data-price="289.90"
-      data-image="img/camisa2.png"
+      data-image="imgs/058813IDA3-removebg-preview.png"
       data-description="Camisa oficial Corinthians temporada 2024."
     >
-      <img src="img/camisa2.png">
+      <img src="imgs/058813IDA3-removebg-preview.png">
       <h4>Corinthians 2024</h4>
       <span class="price">R$ 289,90</span>
     </article>
@@ -350,10 +350,10 @@
       data-id="br-3"
       data-name="Palmeiras 2024"
       data-price="309.90"
-      data-image="img/camisa3.png"
+      data-image="imgs/palmeiras.jpg"
       data-description="Camisa oficial Palmeiras temporada 2024."
     >
-      <img src="img/camisa3.png">
+      <img src="imgs/palmeiras.jpg">
       <h4>Palmeiras 2024</h4>
       <span class="price">R$ 309,90</span>
     </article>
@@ -362,10 +362,10 @@
       data-id="br-4"
       data-name="São Paulo 2024"
       data-price="299.90"
-      data-image="img/camisa4.png"
+      data-image="imgs/saopaulo.webp"
       data-description="Camisa oficial São Paulo temporada 2024."
     >
-      <img src="img/camisa4.png">
+      <img src="imgs/saopaulo.webp">
       <h4>São Paulo 2024</h4>
       <span class="price">R$ 299,90</span>
     </article>
@@ -374,10 +374,10 @@
       data-id="br-5"
       data-name="Grêmio 2024"
       data-price="279.90"
-      data-image="img/camisa5.png"
+      data-image="imgs/gremio.webp"
       data-description="Camisa oficial Grêmio temporada 2024."
     >
-      <img src="img/camisa5.png">
+      <img src="imgs/gremio.webp">
       <h4>Grêmio 2024</h4>
       <span class="price">R$ 279,90</span>
     </article>
@@ -386,10 +386,10 @@
       data-id="br-6"
       data-name="Internacional 2024"
       data-price="279.90"
-      data-image="img/camisa6.png"
+      data-image="imgs/internacional.png"
       data-description="Camisa oficial Internacional temporada 2024."
     >
-      <img src="img/camisa6.png">
+      <img src="imgs/internacional.png">
       <h4>Internacional 2024</h4>
       <span class="price">R$ 279,90</span>
     </article>
@@ -409,10 +409,10 @@
       data-id="esp-1"
       data-name="Brasil Ouro 2002"
       data-price="349.90"
-      data-image="img/camisa1.png"
+      data-image="imgs/BRASILI20241.png"
       data-description="Edição especial comemorativa do penta."
     >
-      <img src="img/camisa1.png">
+      <img src="imgs/BRASILI20241.png">
       <h4>Brasil Ouro 2002</h4>
       <span class="price">R$ 349,90</span>
     </article>
@@ -421,10 +421,10 @@
       data-id="esp-2"
       data-name="Flamengo Libertadores"
       data-price="339.90"
-      data-image="img/camisa2.png"
+      data-image="imgs/IV6047_1_APPAREL_Photography_Front-View_white-png-removebg-preview.png"
       data-description="Camisa edição especial Libertadores."
     >
-      <img src="img/camisa2.png">
+      <img src="imgs/IV6047_1_APPAREL_Photography_Front-View_white-png-removebg-preview.png">
       <h4>Flamengo Libertadores</h4>
       <span class="price">R$ 339,90</span>
     </article>
@@ -433,10 +433,10 @@
       data-id="esp-3"
       data-name="Real Madrid Champions"
       data-price="369.90"
-      data-image="img/camisa3.png"
+      data-image="imgs/camisarealmadridjogador11.png"
       data-description="Edição especial Champions League."
     >
-      <img src="img/camisa3.png">
+      <img src="imgs/camisarealmadridjogador11.png">
       <h4>Real Madrid Champions</h4>
       <span class="price">R$ 369,90</span>
     </article>
@@ -445,10 +445,10 @@
       data-id="esp-4"
       data-name="Barcelona Centenário"
       data-price="359.90"
-      data-image="img/camisa4.png"
+      data-image="imgs/fcbarcelona202425inf.png"
       data-description="Camisa comemorativa centenário."
     >
-      <img src="img/camisa4.png">
+      <img src="imgs/fcbarcelona202425inf.png">
       <h4>Barcelona Centenário</h4>
       <span class="price">R$ 359,90</span>
     </article>
@@ -457,10 +457,10 @@
       data-id="esp-5"
       data-name="Milan Legends"
       data-price="349.90"
-      data-image="img/camisa5.png"
+      data-image="imgs/puma-ac-mailand-trikot-home-2025-2026-rot-f01-rot-779962-removebg-preview-1-.png"
       data-description="Edição especial ídolos do Milan."
     >
-      <img src="img/camisa5.png">
+      <img src="imgs/puma-ac-mailand-trikot-home-2025-2026-rot-f01-rot-779962-removebg-preview-1-.png">
       <h4>Milan Legends</h4>
       <span class="price">R$ 349,90</span>
     </article>
@@ -469,10 +469,10 @@
       data-id="esp-6"
       data-name="PSG Limited"
       data-price="379.90"
-      data-image="img/camisa6.png"
+      data-image="imgs/camisapsg1202526.png"
       data-description="Edição limitada PSG."
     >
-      <img src="img/camisa6.png">
+      <img src="imgs/camisapsg1202526.png">
       <h4>PSG Limited</h4>
       <span class="price">R$ 379,90</span>
     </article>
@@ -492,10 +492,10 @@
       data-id="treino-1"
       data-name="Treino Brasil"
       data-price="199.90"
-      data-image="img/camisa1.png"
+      data-image="imgs/BRASILI20241.png"
       data-description="Camisa treino seleção brasileira."
     >
-      <img src="img/camisa1.png">
+      <img src="imgs/BRASILI20241.png">
       <h4>Treino Brasil</h4>
       <span class="price">R$ 199,90</span>
     </article>
@@ -504,10 +504,10 @@
       data-id="treino-2"
       data-name="Treino Flamengo"
       data-price="189.90"
-      data-image="img/camisa2.png"
+      data-image="imgs/IV6047_1_APPAREL_Photography_Front-View_white-png-removebg-preview.png"
       data-description="Camisa treino Flamengo."
     >
-      <img src="img/camisa2.png">
+      <img src="imgs/IV6047_1_APPAREL_Photography_Front-View_white-png-removebg-preview.png">
       <h4>Treino Flamengo</h4>
       <span class="price">R$ 189,90</span>
     </article>
@@ -516,10 +516,10 @@
       data-id="treino-3"
       data-name="Treino Real Madrid"
       data-price="219.90"
-      data-image="img/camisa3.png"
+      data-image="imgs/camisarealmadridjogador11.png"
       data-description="Camisa treino Real Madrid."
     >
-      <img src="img/camisa3.png">
+      <img src="imgs/camisarealmadridjogador11.png">
       <h4>Treino Real Madrid</h4>
       <span class="price">R$ 219,90</span>
     </article>
@@ -528,10 +528,10 @@
       data-id="treino-4"
       data-name="Treino PSG"
       data-price="209.90"
-      data-image="img/camisa4.png"
+      data-image="imgs/camisapsg1202526.png"
       data-description="Camisa treino PSG."
     >
-      <img src="img/camisa4.png">
+      <img src="imgs/camisapsg1202526.png">
       <h4>Treino PSG</h4>
       <span class="price">R$ 209,90</span>
     </article>
@@ -540,10 +540,10 @@
       data-id="treino-5"
       data-name="Treino Barcelona"
       data-price="219.90"
-      data-image="img/camisa5.png"
+      data-image="imgs/fcbarcelona202425inf.png"
       data-description="Camisa treino Barcelona."
     >
-      <img src="img/camisa5.png">
+      <img src="imgs/fcbarcelona202425inf.png">
       <h4>Treino Barcelona</h4>
       <span class="price">R$ 219,90</span>
     </article>
@@ -552,10 +552,10 @@
       data-id="treino-6"
       data-name="Treino Bayern"
       data-price="229.90"
-      data-image="img/camisa6.png"
+      data-image="imgs/camisa_bayern_de_munique_25_26_i_home_torcedor_masculina_vermelha_3404_1_1b1b170941f8cb18e4c3495b0dd83d76.webp"
       data-description="Camisa treino Bayern."
     >
-      <img src="img/camisa6.png">
+      <img src="imgs/camisa_bayern_de_munique_25_26_i_home_torcedor_masculina_vermelha_3404_1_1b1b170941f8cb18e4c3495b0dd83d76.webp">
       <h4>Treino Bayern</h4>
       <span class="price">R$ 229,90</span>
     </article>
